--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "php": ">= 8.2",
     "ext-bcmath": "*",
     "ext-intl": "*",
-    "ext-mbstring": "*"
+    "ext-mbstring": "*",
+    "kirameki/core": "dev-main",
+    "webmozart/assert": "~1.11.0"
   },
   "require-dev": {
     "kirameki/dumper": "dev-main",
