--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: php-actions/composer@v6
       with:
-        php_extensions: intl pcntl
+        php_extensions: bcmath intl pcntl
     - name: Run test with docker compose
       run: docker compose run --quiet-pull --rm app composer ci-test
     - uses: php-actions/phpstan@v3
