--- a/phpstan.neon
+++ b/phpstan.neon
@@ -6,3 +6,9 @@ parameters:
         - tests/*
     ignoreErrors:
         - '#Unsafe usage of new static\(\)\.#'
+        - message: "#^Result of && is always false\\.$#"
+          count: 1
+          path: src/Str.php
+        - message: "#^Call to function array_is_list\\(\\) with non\\-empty\\-array\\<string, float\\|int\\|string\\> will always evaluate to false\\.$#"
+          count: 1
+          path: src/Str.php
